plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '5.0.0'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'com.adarshr.test-logger' version '2.0.0'
}

repositories {
    jcenter()
}

dependencies {
    implementation 'com.google.guava:guava:28.2-jre'

    // Guice
    implementation 'com.google.inject:guice:4.2.3'
    testImplementation 'com.google.inject.extensions:guice-testlib:4.2.3'

    // Picocli
    implementation 'info.picocli:picocli:4.2.0'
    annotationProcessor 'info.picocli:picocli-codegen:4.2.0'

    // Junit & Mockito
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
    testImplementation 'org.mockito:mockito-core:2.+'
    testImplementation 'org.mockito:mockito-junit-jupiter:2.+'
    testImplementation 'com.ginsberg:junit5-system-exit:1.0.0'
}

compileJava   {
  sourceCompatibility = '14'
  targetCompatibility = '14'
}

application {
    mainClassName = 'legendary.octo.sniffle.app.App'

    // Guice
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

test {
    useJUnitPlatform()

    // Guice
    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}
